--- a/HTML files/To-Do List/style.css
+++ b/HTML files/To-Do List/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 header {
-    background-color: rgb(38, 41, 226);
+    background-color: blue;
     color: white;
     text-align: center;
     width: 100%;
