--- a/HTML files/To-Do List/style.css
+++ b/HTML files/To-Do List/style.css
@@ -55,6 +55,14 @@ main {
     width: 100%;
 }
 
+ul {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    gap: 10px;
+}
+
 .p1 {
     background-color: lightblue;
     border-radius: 5px;
