--- a/HTML files/StackOverflow/style.css
+++ b/HTML files/StackOverflow/style.css
@@ -44,6 +44,9 @@ header {
     gap: 10px;
     display: flex;
     width: 100%;
+    position: sticky;
+    top: 0;
+    background-color: white;
 }
 
 header ul {
